cluster/freeipa/freeipa_deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freeipa-server
  namespace: freeipa
spec:
  serviceName: freeipa
  replicas: 1
  selector:
    matchLabels:
      app: freeipa-server
  template:
    metadata:
      labels:
        app: freeipa-server
    spec:
      hostname: test.ipa1.login.no
      containers:
        - name: freeipa-server
          image: freeipa/freeipa-server:rocky-9
          readinessProbe:
            exec:
              command: ["/usr/bin/systemctl", "is-active", "--quiet", "ipa"]
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /
              port: 80
            # NOTE: if initial installation fails, try increasing this value:
            failureThreshold: 50
            periodSeconds: 30
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          stdin: true
          tty: true
          ports:
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
            - containerPort: 80
            - containerPort: 443
            - containerPort: 389
            - containerPort: 636
            - containerPort: 88
            - containerPort: 464
            - containerPort: 88
              protocol: UDP
            - containerPort: 464
              protocol: UDP
            - containerPort: 123
              protocol: UDP
          volumeMounts:
            - name: ipa-data
              mountPath: /data
            - name: cache-volume
              mountPath: /dev/shm
      volumes:
        - name: ipa-data
          persistentVolumeClaim:
            claimName: ipa-data-pvc
        - name: cgroups
          hostPath:
            path: /sys/fs/cgroup
        - name: run
          emptyDir:
            medium: Memory
        - name: run-systemd
          emptyDir:
            medium: Memory
        - name: tmp
          emptyDir:
            medium: Memory
        - name: data
        - name: cache-volume
          emptyDir:
            medium: Memory
            sizeLimit: 1024Mi
