cluster/freeipa/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freeipa-service
  namespace: freeipa
spec:
  selector:
    app: freeipa-server
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: dns
      protocol: TCP
      port: 53
      targetPort: 53
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: ldap
      protocol: TCP
      port: 389
      targetPort: 389
    - name: ldaps
      protocol: TCP
      port: 636
      targetPort: 636
    - name: kerberos
      protocol: TCP
      port: 88
      targetPort: 88
    - name: kpasswd
      protocol: TCP
      port: 464
      targetPort: 464
    - name: kerberos-udp
      protocol: UDP
      port: 88
      targetPort: 88
    - name: kpasswd-udp
      protocol: UDP
      port: 464
      targetPort: 464
    - name: ntp
      protocol: UDP
      port: 123
      targetPort: 123
  type: ClusterIP
