cluster/freeipa/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freeipa-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: do-issuer-staging
spec:
  ingressClassName: nginx-external
  tls:
    - hosts:
        - ipa1.login.no
      secretName: ipa-certificate
  rules:
    - host: ipa1.login.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freeipa-service
                port:
                  number: 443
